Backward compatibility broken on options
Since [10974], all preferences elements which list module don't all use the same separators.
This is in the goal of unifying syntax with sout (module1{}:module2{}) but breaks preferences for all elements that were not updated ( extraintf, services-discovery, ...)
We must find a way to handle that smoothly :
- Provide both types of separators
- All use ":" -> problems with backwards compatibility
- ...
Edited by zorglub