Support old-style module separators and yell at the user. (Closes #111)